[package]
name = "escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib","lib"]

[dependencies]
borsh = {version="1.6.1", features=["derive"]}
solana-program = "4.0.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "3.0.0"

[dev-dependencies]
litesvm = "0.12.0"
litesvm-token = "0.12.0"
solana-sdk = "3.0.0"

