[package]
name = "tuktuk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib","lib"]

[dependencies]
borsh = {version="1.6.1",features=["derive"]}
solana-program = "4.0.0"
solana-system-interface = {version="3.2.0",features = ["bincode"]}

[dev-dependencies]
solana-sdk = "3.0.0"
litesvm = "0.12.0"
