[package]
name = "assignment8-pinocchio-escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
pinocchio = {version="0.11.1", features = ["cpi"]}
pinocchio-associated-token-account = "0.4.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
pinocchio-token = {version="0.6.0"}
solana-address = {version="2.6.1"}
solana-signer = "3.0.1"
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
litesvm-token = "0.12.0"
litesvm = "0.12.0"
solana-keypair = "3.1.2"
solana-native-token = "3.0.0"
solana-pubkey = "4.2.0"
solana-instruction = "3.4.0"
solana-transaction = {version="3.1.0"}
